{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 194,
  "lineage": "10dd7d27-8ff1-1dc7-4c8f-a9ddf2c4c8e9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "west_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382747916:transit-gateway-route-table/tgw-rtb-09ae87c9157f1b536",
            "default_association_route_table": true,
            "default_propagation_route_table": true,
            "filter": [
              {
                "name": "default-association-route-table",
                "values": [
                  "true"
                ]
              },
              {
                "name": "transit-gateway-id",
                "values": [
                  "tgw-060c8c99a09a5ea5c"
                ]
              }
            ],
            "id": "tgw-rtb-09ae87c9157f1b536",
            "region": "us-west-2",
            "transit_gateway_id": "tgw-060c8c99a09a5ea5c"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "west_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382747916:vpc/vpc-0a0d65ef48ac1b6e7",
            "cidr_block": "10.70.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e9982c900d04470b",
                "cidr_block": "10.70.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-098d778f6d54f5ad2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "staging-west"
                ]
              }
            ],
            "id": "vpc-0a0d65ef48ac1b6e7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00d3b989be3ab9de3",
            "owner_id": "992382747916",
            "region": "us-west-2",
            "tags": {
              "Name": "staging-west",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "01-west-network"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64515,
            "arn": "arn:aws:ec2:us-east-2:992382747916:transit-gateway/tgw-052489305f16a515e",
            "association_default_route_table_id": "tgw-rtb-04b59f045d1f40e8f",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway for us-east-2 staging network",
            "dns_support": "enable",
            "encryption_support": "disable",
            "id": "tgw-052489305f16a515e",
            "multicast_support": "disable",
            "owner_id": "992382747916",
            "propagation_default_route_table_id": "tgw-rtb-04b59f045d1f40e8f",
            "region": "us-east-2",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "staging-east-2-tgw",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-tgw",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment",
      "name": "east_2_to_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:transit-gateway-attachment/tgw-attach-04838b51c1b7b948f",
            "id": "tgw-attach-04838b51c1b7b948f",
            "peer_account_id": "992382747916",
            "peer_region": "us-east-1",
            "peer_transit_gateway_id": "tgw-095e7f99bc8e0d02e",
            "region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "staging-east-2-east-peering",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-east-peering",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "transit_gateway_id": "tgw-052489305f16a515e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "data.terraform_remote_state.east_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment",
      "name": "east_2_to_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:transit-gateway-attachment/tgw-attach-058abdf5cda248ed5",
            "id": "tgw-attach-058abdf5cda248ed5",
            "peer_account_id": "992382747916",
            "peer_region": "us-west-2",
            "peer_transit_gateway_id": "tgw-060c8c99a09a5ea5c",
            "region": "us-east-2",
            "state": "pendingAcceptance",
            "tags": {
              "Name": "staging-east-2-west-peering",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-west-peering",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "transit_gateway_id": "tgw-052489305f16a515e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "data.terraform_remote_state.west_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment_accepter",
      "name": "east_accept_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-04838b51c1b7b948f",
            "peer_account_id": "992382747916",
            "peer_region": "us-east-2",
            "peer_transit_gateway_id": "tgw-052489305f16a515e",
            "region": "us-east-1",
            "tags": {
              "Name": "staging-east-east-2-peering-accept",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-east-2-peering-accept",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "transit_gateway_attachment_id": "tgw-attach-04838b51c1b7b948f",
            "transit_gateway_id": "tgw-095e7f99bc8e0d02e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "aws_ec2_transit_gateway_peering_attachment.east_2_to_east",
            "data.terraform_remote_state.east_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment_accepter",
      "name": "west_accept_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-058abdf5cda248ed5",
            "peer_account_id": "992382747916",
            "peer_region": "us-east-2",
            "peer_transit_gateway_id": "tgw-052489305f16a515e",
            "region": "us-west-2",
            "tags": {
              "Name": "staging-west-east-2-peering-accept",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-west-east-2-peering-accept",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "transit_gateway_attachment_id": "tgw-attach-058abdf5cda248ed5",
            "transit_gateway_id": "tgw-060c8c99a09a5ea5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "aws_ec2_transit_gateway_peering_attachment.east_2_to_west",
            "data.terraform_remote_state.west_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "east_2_to_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.60.0.0/16",
            "id": "tgw-rtb-04b59f045d1f40e8f_10.60.0.0/16",
            "region": "us-east-2",
            "transit_gateway_attachment_id": "tgw-attach-04838b51c1b7b948f",
            "transit_gateway_route_table_id": "tgw-rtb-04b59f045d1f40e8f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "aws_ec2_transit_gateway_peering_attachment.east_2_to_east",
            "aws_ec2_transit_gateway_peering_attachment.east_2_to_west",
            "aws_ec2_transit_gateway_peering_attachment_accepter.east_accept_east_2",
            "aws_ec2_transit_gateway_peering_attachment_accepter.west_accept_east_2",
            "data.terraform_remote_state.east_network",
            "data.terraform_remote_state.west_network",
            "time_sleep.wait_for_tgw_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "east_2_to_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.70.0.0/16",
            "id": "tgw-rtb-04b59f045d1f40e8f_10.70.0.0/16",
            "region": "us-east-2",
            "transit_gateway_attachment_id": "tgw-attach-058abdf5cda248ed5",
            "transit_gateway_route_table_id": "tgw-rtb-04b59f045d1f40e8f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "aws_ec2_transit_gateway_peering_attachment.east_2_to_east",
            "aws_ec2_transit_gateway_peering_attachment.east_2_to_west",
            "aws_ec2_transit_gateway_peering_attachment_accepter.east_accept_east_2",
            "aws_ec2_transit_gateway_peering_attachment_accepter.west_accept_east_2",
            "data.terraform_remote_state.east_network",
            "data.terraform_remote_state.west_network",
            "time_sleep.wait_for_tgw_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "east_to_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.65.0.0/16",
            "id": "tgw-rtb-0eb4cfd83d9e2600d_10.65.0.0/16",
            "region": "us-east-1",
            "transit_gateway_attachment_id": "tgw-attach-04838b51c1b7b948f",
            "transit_gateway_route_table_id": "tgw-rtb-0eb4cfd83d9e2600d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "aws_ec2_transit_gateway_peering_attachment.east_2_to_east",
            "aws_ec2_transit_gateway_peering_attachment.east_2_to_west",
            "aws_ec2_transit_gateway_peering_attachment_accepter.east_accept_east_2",
            "aws_ec2_transit_gateway_peering_attachment_accepter.west_accept_east_2",
            "data.terraform_remote_state.east_network",
            "data.terraform_remote_state.west_network",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "time_sleep.wait_for_tgw_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "west_to_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.65.0.0/16",
            "id": "tgw-rtb-09ae87c9157f1b536_10.65.0.0/16",
            "region": "us-west-2",
            "transit_gateway_attachment_id": "tgw-attach-058abdf5cda248ed5",
            "transit_gateway_route_table_id": "tgw-rtb-09ae87c9157f1b536"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "aws_ec2_transit_gateway_peering_attachment.east_2_to_east",
            "aws_ec2_transit_gateway_peering_attachment.east_2_to_west",
            "aws_ec2_transit_gateway_peering_attachment_accepter.east_accept_east_2",
            "aws_ec2_transit_gateway_peering_attachment_accepter.west_accept_east_2",
            "data.aws_ec2_transit_gateway_route_table.west_default",
            "data.terraform_remote_state.east_network",
            "data.terraform_remote_state.west_network",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "time_sleep.wait_for_tgw_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "east_2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-2:992382747916:transit-gateway-attachment/tgw-attach-0e4c8a8258973fb09",
            "dns_support": "enable",
            "id": "tgw-attach-0e4c8a8258973fb09",
            "ipv6_support": "disable",
            "region": "us-east-2",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-00235d4b2f1a6a408",
              "subnet-0401203eab1aa6c85"
            ],
            "tags": {
              "Name": "staging-east-2-vpc-attachment",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-vpc-attachment",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-052489305f16a515e",
            "vpc_id": "vpc-0ff01f65820f5040e",
            "vpc_owner_id": "992382747916"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_subnet.intra",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "east_2_db_to_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.60.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c016152f982e4a682056622336",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0c016152f982e4a68",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-052489305f16a515e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.60.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-0c016152f982e4a68"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "data.terraform_remote_state.east_network",
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.database",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "east_2_db_to_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.70.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c016152f982e4a681844348227",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0c016152f982e4a68",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-052489305f16a515e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.70.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-0c016152f982e4a68"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "data.terraform_remote_state.west_network",
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.database",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "east_2_db_to_west_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.80.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c016152f982e4a682992065170",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0c016152f982e4a68",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-052489305f16a515e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.80.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-0c016152f982e4a68"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.database",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "east_2_intra_to_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.60.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b4d8d0a47b4f42912056622336",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0b4d8d0a47b4f4291",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-052489305f16a515e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.60.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-0b4d8d0a47b4f4291"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "data.terraform_remote_state.east_network",
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.intra",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "east_2_intra_to_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.70.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b4d8d0a47b4f42911844348227",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0b4d8d0a47b4f4291",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-052489305f16a515e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.70.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-0b4d8d0a47b4f4291"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "data.terraform_remote_state.west_network",
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.intra",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "east_2_intra_to_west_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.80.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b4d8d0a47b4f42912992065170",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0b4d8d0a47b4f4291",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-052489305f16a515e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.80.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-0b4d8d0a47b4f4291"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.intra",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "east_2_private_to_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.60.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-057c0b19e49ca533b2056622336",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-057c0b19e49ca533b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-052489305f16a515e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.60.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-057c0b19e49ca533b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "data.terraform_remote_state.east_network",
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "east_2_private_to_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.70.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-057c0b19e49ca533b1844348227",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-057c0b19e49ca533b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-052489305f16a515e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.70.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-057c0b19e49ca533b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "data.terraform_remote_state.west_network",
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "east_2_private_to_west_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.80.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-057c0b19e49ca533b2992065170",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-057c0b19e49ca533b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-052489305f16a515e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.80.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-057c0b19e49ca533b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.east_2",
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "east_db_to_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": "rtb-06c3bd2d67b0bb60a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06c3bd2d67b0bb60a846569316",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-06c3bd2d67b0bb60a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-095e7f99bc8e0d02e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-06c3bd2d67b0bb60a"
          },
          "dependencies": [
            "data.terraform_remote_state.east_network",
            "module.east_2_network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "east_intra_to_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": "rtb-0e93a5d6ac1c54e03",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e93a5d6ac1c54e03846569316",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0e93a5d6ac1c54e03",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-095e7f99bc8e0d02e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0e93a5d6ac1c54e03"
          },
          "dependencies": [
            "data.terraform_remote_state.east_network",
            "module.east_2_network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "east_private_to_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": "rtb-0189113c2767b05ac",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0189113c2767b05ac846569316",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0189113c2767b05ac",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-095e7f99bc8e0d02e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0189113c2767b05ac"
          },
          "dependencies": [
            "data.terraform_remote_state.east_network",
            "module.east_2_network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "west_hub_to_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": "rtb-0069a4537877e0f49",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0069a4537877e0f49846569316",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0069a4537877e0f49",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-060c8c99a09a5ea5c",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0069a4537877e0f49"
          },
          "dependencies": [
            "data.aws_route_tables.west_hub",
            "data.aws_vpc.west_hub",
            "data.terraform_remote_state.west_network",
            "module.east_2_network.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "rtb-00a469da79c232ca7",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00a469da79c232ca7846569316",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-00a469da79c232ca7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-060c8c99a09a5ea5c",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-00a469da79c232ca7"
          },
          "dependencies": [
            "data.aws_route_tables.west_hub",
            "data.aws_vpc.west_hub",
            "data.terraform_remote_state.west_network",
            "module.east_2_network.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "rtb-00d3b989be3ab9de3",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00d3b989be3ab9de3846569316",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-00d3b989be3ab9de3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-060c8c99a09a5ea5c",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-00d3b989be3ab9de3"
          },
          "dependencies": [
            "data.aws_route_tables.west_hub",
            "data.aws_vpc.west_hub",
            "data.terraform_remote_state.west_network",
            "module.east_2_network.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "rtb-06e757896be02e518",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06e757896be02e518846569316",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-06e757896be02e518",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-060c8c99a09a5ea5c",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-06e757896be02e518"
          },
          "dependencies": [
            "data.aws_route_tables.west_hub",
            "data.aws_vpc.west_hub",
            "data.terraform_remote_state.west_network",
            "module.east_2_network.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "rtb-0e63f84de57314631",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e63f84de57314631846569316",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0e63f84de57314631",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-060c8c99a09a5ea5c",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "10.65.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0e63f84de57314631"
          },
          "dependencies": [
            "data.aws_route_tables.west_hub",
            "data.aws_vpc.west_hub",
            "data.terraform_remote_state.west_network",
            "module.east_2_network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "execute_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:vpc-endpoint/vpce-0c27190d9740259ff",
            "dns_entry": [
              {
                "dns_name": "vpce-0c27190d9740259ff-etd6n0sg.execute-api.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0c27190d9740259ff-etd6n0sg-us-east-2b.execute-api.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0c27190d9740259ff-etd6n0sg-us-east-2a.execute-api.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "execute-api.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z1022322AH4FULM7LOBS"
              },
              {
                "dns_name": "*.execute-api.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z1022322AH4FULM7LOBS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c27190d9740259ff",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01b29aae6e8c41e02",
              "eni-0a6bf2ffb0f7f066e"
            ],
            "owner_id": "992382747916",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0756c97874c52a98d"
            ],
            "service_name": "com.amazonaws.us-east-2.execute-api",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.65.20.110",
                "subnet_id": "subnet-0401203eab1aa6c85"
              },
              {
                "ipv4": "10.65.21.14",
                "subnet_id": "subnet-00235d4b2f1a6a408"
              }
            ],
            "subnet_ids": [
              "subnet-00235d4b2f1a6a408",
              "subnet-0401203eab1aa6c85"
            ],
            "tags": {
              "Name": "staging-east-2-execute-api-vpce",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-execute-api-vpce",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "vpce-0c27190d9740259ff",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this_name_prefix",
            "module.east_2_network.module.vpc.aws_subnet.intra",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:security-group/sg-0756c97874c52a98d",
            "description": "Allows HTTPS from VPC workloads to interface VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "10.65.0.0/16"
                ],
                "description": "VPC only (stateful SG handles return path)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0756c97874c52a98d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.65.0.0/16"
                ],
                "description": "HTTPS from VPC workloads (interface endpoints)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "staging-east-2-vpce-sg-20260531205905837800000003",
            "name_prefix": "staging-east-2-vpce-sg-",
            "owner_id": "992382747916",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "staging-east-2-vpce-sg",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-vpce-sg",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "sg-0756c97874c52a98d",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.65.0.0/16"
            ],
            "description": "VPC only (stateful SG handles return path)",
            "from_port": 0,
            "id": "sgrule-2883362149",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-2",
            "security_group_id": "sg-0756c97874c52a98d",
            "security_group_rule_id": "sgr-0e058c8dde09dbeb8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this_name_prefix",
            "module.east_2_network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.65.0.0/16"
            ],
            "description": "HTTPS from VPC workloads (interface endpoints)",
            "from_port": 443,
            "id": "sgrule-3723372311",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0756c97874c52a98d",
            "security_group_rule_id": "sgr-0e48a1cd41dab8139",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this_name_prefix",
            "module.east_2_network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.interface_endpoint_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.managed_service_endpoints",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.managed_service_endpoints",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.managed_service_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": "dynamodb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:vpc-endpoint/vpce-062d7f5a181674b3c",
            "cidr_blocks": [
              "35.71.102.128/26",
              "35.71.102.0/25",
              "52.94.4.0/24"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-062d7f5a181674b3c",
            "ip_address_type": "ipv4",
            "owner_id": "992382747916",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-4ca54025",
            "private_dns_enabled": false,
            "region": "us-east-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-057c0b19e49ca533b",
              "rtb-0b4d8d0a47b4f4291",
              "rtb-0c016152f982e4a68"
            ],
            "service_name": "com.amazonaws.us-east-2.dynamodb",
            "service_region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "dynamodb",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "dynamodb",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "vpce-062d7f5a181674b3c",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this_name_prefix",
            "module.east_2_network.module.managed_service_endpoints.aws_security_group.this",
            "module.east_2_network.module.managed_service_endpoints.data.aws_vpc_endpoint_service.this",
            "module.east_2_network.module.vpc.aws_route_table.database",
            "module.east_2_network.module.vpc.aws_route_table.intra",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_subnet.intra",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:vpc-endpoint/vpce-04b861c5e0d3b701a",
            "dns_entry": [
              {
                "dns_name": "vpce-04b861c5e0d3b701a-2sifbfbb.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-04b861c5e0d3b701a-2sifbfbb-us-east-2a.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-04b861c5e0d3b701a-2sifbfbb-us-east-2b.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "logs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z10216112IL0BHUJDV55Z"
              },
              {
                "dns_name": "logs.us-east-2.api.aws",
                "hosted_zone_id": "Z0644829ATQ4PQZPEDYL"
              },
              {
                "dns_name": "streaming-logs.us-east-2.api.aws",
                "hosted_zone_id": "Z1022857LCALAQWLV5PE"
              },
              {
                "dns_name": "streaming-logs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z10228562DW3IVIKG8L3U"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04b861c5e0d3b701a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-040ef792b0a0fe612",
              "eni-0a666727bee9e2cc5"
            ],
            "owner_id": "992382747916",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0756c97874c52a98d"
            ],
            "service_name": "com.amazonaws.us-east-2.logs",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.65.20.175",
                "subnet_id": "subnet-0401203eab1aa6c85"
              },
              {
                "ipv4": "10.65.21.216",
                "subnet_id": "subnet-00235d4b2f1a6a408"
              }
            ],
            "subnet_ids": [
              "subnet-00235d4b2f1a6a408",
              "subnet-0401203eab1aa6c85"
            ],
            "tags": {
              "Name": "logs",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "logs",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "vpce-04b861c5e0d3b701a",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this_name_prefix",
            "module.east_2_network.module.managed_service_endpoints.aws_security_group.this",
            "module.east_2_network.module.managed_service_endpoints.data.aws_vpc_endpoint_service.this",
            "module.east_2_network.module.vpc.aws_route_table.database",
            "module.east_2_network.module.vpc.aws_route_table.intra",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_subnet.intra",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:vpc-endpoint/vpce-07a7d99288f19ee6c",
            "cidr_blocks": [
              "18.34.252.0/22",
              "52.219.141.0/24",
              "18.34.72.0/21",
              "52.219.96.0/20",
              "52.219.224.0/21",
              "16.12.60.0/22",
              "52.219.232.0/22",
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "3.5.132.0/23",
              "3.5.92.0/23",
              "3.5.88.0/22",
              "16.12.64.0/22",
              "52.219.212.0/22",
              "52.219.176.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07a7d99288f19ee6c",
            "ip_address_type": "ipv4",
            "owner_id": "992382747916",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "region": "us-east-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-057c0b19e49ca533b",
              "rtb-0b4d8d0a47b4f4291",
              "rtb-0c016152f982e4a68"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "service_region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "s3",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "s3",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "vpce-07a7d99288f19ee6c",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this_name_prefix",
            "module.east_2_network.module.managed_service_endpoints.aws_security_group.this",
            "module.east_2_network.module.managed_service_endpoints.data.aws_vpc_endpoint_service.this",
            "module.east_2_network.module.vpc.aws_route_table.database",
            "module.east_2_network.module.vpc.aws_route_table.intra",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_subnet.intra",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "secretsmanager",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:vpc-endpoint/vpce-0cd125ac7e479421e",
            "dns_entry": [
              {
                "dns_name": "vpce-0cd125ac7e479421e-y0rcbsgf.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0cd125ac7e479421e-y0rcbsgf-us-east-2b.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0cd125ac7e479421e-y0rcbsgf-us-east-2a.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "secretsmanager.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z10159893E2PCMO6IQEXB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cd125ac7e479421e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a97376520f056155",
              "eni-0e4c1f905ce0e752c"
            ],
            "owner_id": "992382747916",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0756c97874c52a98d"
            ],
            "service_name": "com.amazonaws.us-east-2.secretsmanager",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.65.20.59",
                "subnet_id": "subnet-0401203eab1aa6c85"
              },
              {
                "ipv4": "10.65.21.132",
                "subnet_id": "subnet-00235d4b2f1a6a408"
              }
            ],
            "subnet_ids": [
              "subnet-00235d4b2f1a6a408",
              "subnet-0401203eab1aa6c85"
            ],
            "tags": {
              "Name": "secretsmanager",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "secretsmanager",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "vpce-0cd125ac7e479421e",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this_name_prefix",
            "module.east_2_network.module.managed_service_endpoints.aws_security_group.this",
            "module.east_2_network.module.managed_service_endpoints.data.aws_vpc_endpoint_service.this",
            "module.east_2_network.module.vpc.aws_route_table.database",
            "module.east_2_network.module.vpc.aws_route_table.intra",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_subnet.intra",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "sqs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:vpc-endpoint/vpce-09257490475358528",
            "dns_entry": [
              {
                "dns_name": "vpce-09257490475358528-ua65dsoz.sqs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-09257490475358528-ua65dsoz-us-east-2b.sqs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-09257490475358528-ua65dsoz-us-east-2a.sqs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "sqs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z0611494GT8Q7LFFT2WG"
              },
              {
                "dns_name": "sqs.us-east-2.api.aws",
                "hosted_zone_id": "Z1022907GGCQ0G5WCV2N"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09257490475358528",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0273c958cb1a9ba0c",
              "eni-041596279c91dd5bd"
            ],
            "owner_id": "992382747916",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0756c97874c52a98d"
            ],
            "service_name": "com.amazonaws.us-east-2.sqs",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.65.20.152",
                "subnet_id": "subnet-0401203eab1aa6c85"
              },
              {
                "ipv4": "10.65.21.204",
                "subnet_id": "subnet-00235d4b2f1a6a408"
              }
            ],
            "subnet_ids": [
              "subnet-00235d4b2f1a6a408",
              "subnet-0401203eab1aa6c85"
            ],
            "tags": {
              "Name": "sqs",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "sqs",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "vpce-09257490475358528",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this_name_prefix",
            "module.east_2_network.module.managed_service_endpoints.aws_security_group.this",
            "module.east_2_network.module.managed_service_endpoints.data.aws_vpc_endpoint_service.this",
            "module.east_2_network.module.vpc.aws_route_table.database",
            "module.east_2_network.module.vpc.aws_route_table.intra",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_subnet.intra",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "xray",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:vpc-endpoint/vpce-07004454d37c6b254",
            "dns_entry": [
              {
                "dns_name": "vpce-07004454d37c6b254-13bltxwo.xray.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-07004454d37c6b254-13bltxwo-us-east-2a.xray.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-07004454d37c6b254-13bltxwo-us-east-2b.xray.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "xray.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z061345718DK2C69V51H3"
              },
              {
                "dns_name": "xray.us-east-2.api.aws",
                "hosted_zone_id": "Z06103993HLSF227MSIC0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07004454d37c6b254",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05b3c6ba36fbd5ae4",
              "eni-06cbc4466ea980fa5"
            ],
            "owner_id": "992382747916",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0756c97874c52a98d"
            ],
            "service_name": "com.amazonaws.us-east-2.xray",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.65.20.92",
                "subnet_id": "subnet-0401203eab1aa6c85"
              },
              {
                "ipv4": "10.65.21.139",
                "subnet_id": "subnet-00235d4b2f1a6a408"
              }
            ],
            "subnet_ids": [
              "subnet-00235d4b2f1a6a408",
              "subnet-0401203eab1aa6c85"
            ],
            "tags": {
              "Name": "xray",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "xray",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "vpce-07004454d37c6b254",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this",
            "module.east_2_network.module.interface_endpoint_security_group.aws_security_group.this_name_prefix",
            "module.east_2_network.module.managed_service_endpoints.aws_security_group.this",
            "module.east_2_network.module.managed_service_endpoints.data.aws_vpc_endpoint_service.this",
            "module.east_2_network.module.vpc.aws_route_table.database",
            "module.east_2_network.module.vpc.aws_route_table.intra",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_subnet.intra",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:network-acl/acl-092aca80c61964624",
            "default_network_acl_id": "acl-092aca80c61964624",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-092aca80c61964624",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "992382747916",
            "region": "us-east-2",
            "subnet_ids": [
              "subnet-00235d4b2f1a6a408",
              "subnet-034b47d3dd3c88f9c",
              "subnet-0401203eab1aa6c85",
              "subnet-0439be88129c0395f",
              "subnet-09270e1b86471396f",
              "subnet-0a194069781cfa5a3",
              "subnet-0b435c258d9c69f90",
              "subnet-0b582d95161603c4f"
            ],
            "tags": {
              "Name": "staging-east-2-default",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-default",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.east_2_network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:route-table/rtb-07b122d9b1b567801",
            "default_route_table_id": "rtb-07b122d9b1b567801",
            "id": "rtb-07b122d9b1b567801",
            "owner_id": "992382747916",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "staging-east-2-default",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-default",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.east_2_network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:security-group/sg-07a9806e81f723865",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07a9806e81f723865",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "992382747916",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "staging-east-2-default",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-default",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.east_2_network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2"
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2"
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09faa378eda494a2c",
            "arn": "arn:aws:ec2:us-east-2:992382747916:elastic-ip/eipalloc-09faa378eda494a2c",
            "association_id": "eipassoc-0090bb219b8c188e7",
            "domain": "vpc",
            "id": "eipalloc-09faa378eda494a2c",
            "network_border_group": "us-east-2",
            "network_interface": "eni-05417505a1000fe5f",
            "private_dns": "ip-10-65-0-39.us-east-2.compute.internal",
            "private_ip": "10.65.0.39",
            "public_dns": "ec2-18-190-35-59.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.35.59",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "staging-east-2-us-east-2a",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-us-east-2a",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "eipalloc-09faa378eda494a2c",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_internet_gateway.this",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:internet-gateway/igw-0748f8aa57e3b61b3",
            "id": "igw-0748f8aa57e3b61b3",
            "owner_id": "992382747916",
            "region": "us-east-2",
            "tags": {
              "Name": "staging-east-2",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "igw-0748f8aa57e3b61b3",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09faa378eda494a2c",
            "association_id": "eipassoc-0090bb219b8c188e7",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-06ec645d3eea0b71b",
            "network_interface_id": "eni-05417505a1000fe5f",
            "private_ip": "10.65.0.39",
            "public_ip": "18.190.35.59",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b435c258d9c69f90",
            "tags": {
              "Name": "staging-east-2-us-east-2a",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-us-east-2a",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "nat-06ec645d3eea0b71b",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_eip.nat",
            "module.east_2_network.module.vpc.aws_internet_gateway.this",
            "module.east_2_network.module.vpc.aws_subnet.public",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-057c0b19e49ca533b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06ec645d3eea0b71b",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-057c0b19e49ca533b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-057c0b19e49ca533b"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_eip.nat",
            "module.east_2_network.module.vpc.aws_internet_gateway.this",
            "module.east_2_network.module.vpc.aws_nat_gateway.this",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_subnet.public",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0748f8aa57e3b61b3",
            "id": "r-rtb-0e804efaddcac91e41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0e804efaddcac91e4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-0e804efaddcac91e4"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_internet_gateway.this",
            "module.east_2_network.module.vpc.aws_route_table.public",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:route-table/rtb-0c016152f982e4a68",
            "id": "rtb-0c016152f982e4a68",
            "owner_id": "992382747916",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.60.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "tgw-052489305f16a515e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.70.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "tgw-052489305f16a515e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.80.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "tgw-052489305f16a515e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-east-2-db",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-db",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "rtb-0c016152f982e4a68",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:route-table/rtb-0b4d8d0a47b4f4291",
            "id": "rtb-0b4d8d0a47b4f4291",
            "owner_id": "992382747916",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.60.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "tgw-052489305f16a515e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.70.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "tgw-052489305f16a515e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.80.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "tgw-052489305f16a515e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-east-2-intra",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-intra",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "rtb-0b4d8d0a47b4f4291",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:route-table/rtb-057c0b19e49ca533b",
            "id": "rtb-057c0b19e49ca533b",
            "owner_id": "992382747916",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.60.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "tgw-052489305f16a515e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.70.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "tgw-052489305f16a515e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.80.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "tgw-052489305f16a515e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-east-2-private",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-private",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "rtb-057c0b19e49ca533b",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:route-table/rtb-0e804efaddcac91e4",
            "id": "rtb-0e804efaddcac91e4",
            "owner_id": "992382747916",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0748f8aa57e3b61b3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-east-2-public",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-public",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "rtb-0e804efaddcac91e4",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": []
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c38e47260499a558",
            "region": "us-east-2",
            "route_table_id": "rtb-0c016152f982e4a68",
            "subnet_id": "subnet-0b582d95161603c4f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "rtbassoc-0c38e47260499a558",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.database",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_subnet.database",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0257b36872c4e77f3",
            "region": "us-east-2",
            "route_table_id": "rtb-0c016152f982e4a68",
            "subnet_id": "subnet-0439be88129c0395f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "rtbassoc-0257b36872c4e77f3",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.database",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_subnet.database",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2"
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c080a034d249ad9",
            "region": "us-east-2",
            "route_table_id": "rtb-0b4d8d0a47b4f4291",
            "subnet_id": "subnet-0401203eab1aa6c85"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "rtbassoc-04c080a034d249ad9",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.intra",
            "module.east_2_network.module.vpc.aws_subnet.intra",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fca794eccef48ffa",
            "region": "us-east-2",
            "route_table_id": "rtb-0b4d8d0a47b4f4291",
            "subnet_id": "subnet-00235d4b2f1a6a408"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "rtbassoc-0fca794eccef48ffa",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.intra",
            "module.east_2_network.module.vpc.aws_subnet.intra",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2"
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029853670ca14ea94",
            "region": "us-east-2",
            "route_table_id": "rtb-057c0b19e49ca533b",
            "subnet_id": "subnet-0a194069781cfa5a3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "rtbassoc-029853670ca14ea94",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_subnet.private",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f04497517127543a",
            "region": "us-east-2",
            "route_table_id": "rtb-057c0b19e49ca533b",
            "subnet_id": "subnet-034b47d3dd3c88f9c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "rtbassoc-0f04497517127543a",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.private",
            "module.east_2_network.module.vpc.aws_subnet.private",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08420d9a0d6b8f533",
            "region": "us-east-2",
            "route_table_id": "rtb-0e804efaddcac91e4",
            "subnet_id": "subnet-0b435c258d9c69f90"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "rtbassoc-08420d9a0d6b8f533",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.public",
            "module.east_2_network.module.vpc.aws_subnet.public",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3581a05fea59c45",
            "region": "us-east-2",
            "route_table_id": "rtb-0e804efaddcac91e4",
            "subnet_id": "subnet-09270e1b86471396f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "rtbassoc-0f3581a05fea59c45",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_route_table.public",
            "module.east_2_network.module.vpc.aws_subnet.public",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2"
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2"
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:subnet/subnet-0b582d95161603c4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.65.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b582d95161603c4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382747916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "staging-east-2-db-us-east-2a",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-db-us-east-2a",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "subnet-0b582d95161603c4f",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:subnet/subnet-0439be88129c0395f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.65.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0439be88129c0395f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382747916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "staging-east-2-db-us-east-2b",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-db-us-east-2b",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "subnet-0439be88129c0395f",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2"
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:subnet/subnet-0401203eab1aa6c85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.65.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0401203eab1aa6c85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382747916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "staging-east-2-intra-us-east-2a",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-intra-us-east-2a",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "subnet-0401203eab1aa6c85",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:subnet/subnet-00235d4b2f1a6a408",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.65.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00235d4b2f1a6a408",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382747916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "staging-east-2-intra-us-east-2b",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-intra-us-east-2b",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "subnet-00235d4b2f1a6a408",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2"
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:subnet/subnet-0a194069781cfa5a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.65.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a194069781cfa5a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382747916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "staging-east-2-private-us-east-2a",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-private-us-east-2a",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "subnet-0a194069781cfa5a3",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:subnet/subnet-034b47d3dd3c88f9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.65.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034b47d3dd3c88f9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382747916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "staging-east-2-private-us-east-2b",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-private-us-east-2b",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "subnet-034b47d3dd3c88f9c",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:subnet/subnet-0b435c258d9c69f90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.65.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b435c258d9c69f90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382747916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "staging-east-2-public-us-east-2a",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-public-us-east-2a",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "subnet-0b435c258d9c69f90",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:subnet/subnet-09270e1b86471396f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.65.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09270e1b86471396f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382747916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "staging-east-2-public-us-east-2b",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2-public-us-east-2b",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "vpc_id": "vpc-0ff01f65820f5040e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "subnet-09270e1b86471396f",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.east_2_network.data.aws_availability_zones.available",
            "module.east_2_network.module.vpc.aws_vpc.this",
            "module.east_2_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2"
    },
    {
      "module": "module.east_2_network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382747916:vpc/vpc-0ff01f65820f5040e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.65.0.0/16",
            "default_network_acl_id": "acl-092aca80c61964624",
            "default_route_table_id": "rtb-07b122d9b1b567801",
            "default_security_group_id": "sg-07a9806e81f723865",
            "dhcp_options_id": "dopt-01777aea31e8b2a8e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff01f65820f5040e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b122d9b1b567801",
            "owner_id": "992382747916",
            "region": "us-east-2",
            "tags": {
              "Name": "staging-east-2",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            },
            "tags_all": {
              "Name": "staging-east-2",
              "environment": "staging",
              "managed_by": "terraform",
              "stack": "staging-multi-state",
              "state": "05-east-2-network"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382747916",
            "id": "vpc-0ff01f65820f5040e",
            "region": "us-east-2"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}